Process Hacker

2.22
 * NEW/IMPROVED:
   * Added highlighting for metro-style apps
   * Improved .NET process detection
   * Updated ExtendedTools plugin:
     * Updated disk monitoring for Windows 8
     * Updated memory list information for Windows 8
   * Updated WindowExplorer plugin:
     * Fixed hook support for low integrity processes
 * FIXED:
   * Fixed memory leaks
   * Fixed bug preventing Interrupts/DPCs from being shown 
     as the max. CPU process on 64-bit systems

2.21
 * NEW/IMPROVED:
   * Added Private Bytes Delta, ASLR and Subsystem columns
   * Added ASLR and Time Stamp columns to modules list
   * Added check for debugger in Terminator
 * FIXED:
   * Fixed Show CPU Below 0.01 not respecting locale
   * Fixed copying from network list

2.20
 * NEW/IMPROVED:
   * Added support for managed thread stacks on x64
   * Added column selection for handle list
   * Added CPU column to threads list
   * Improved module detection
   * Added Ideal Processor to Threads tab
   * Added pool usage and minimum/maximum working set columns
   * Implemented Properties button for Thread handles
   * Set descending sort as the default for most numeric columns
   * Extended header context menu
   * Removed tooltip text truncation
   * Improved cycle-based CPU usage calculation
   * Set default KProcessHacker security level to only allow
     connections when Process Hacker is running as administrator.
     See README.txt for instructions on how to restore the old
     behavior.
   * Added Updater plugin
   * Updated DotNetTools plugin:
     * Added managed symbol resolution for thread stacks
   * Updated ExtendedTools plugin:
     * Added Disk tab
     * Added Hard Faults, Hard Faults Delta and Peak Threads
       columns to process tree list
     * Added Firewall Status column
 * FIXED:
   * Fixed file name resolution bug
   * Save settings on shutdown/logoff
   * Fixed state highlighting bug
   * Fixed command line propagation for -elevate